# fragments

./: .gitignore  README.md  _fragments_build.py  pyproject.toml
data/: AAPL.pkl  AMZN.pkl  GOOG.pkl  download.ipynb
fragments/: cproc.pyx  indicator.py  indicators.py  optim.py  params.py  stats.py  strategy.py
notebooks/: crypto.ipynb  crypto_conditional.ipynb  perf.ipynb  plot_example.ipynb
tests/: test_indicators.py  test_optim.py  test_param_storage.py  test_stats.py  test_strategies.py  test_trade.py
